--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <header>
         <h1>Style Tile Template</h1>
         <h2>Project name</h2>
-        <h3>Style tile</h3>
+        <h3>Striking and Simple</h3>
         <h4>Version 1</h4>
       </header>
     </div>
@@ -23,19 +23,19 @@
         <section class="swatches">
           <h3 class="section-heading">Colour swatches</h3>
           <ul class="swatchgrid">
-            <li class="color-swatch-1"></li>
-            <li class="color-swatch-2"></li>
-            <li class="color-swatch-3"></li>
-            <li class="color-swatch-4"></li>
-            <li class="color-swatch-5"></li>
+            <li class="color-swatch-1"><p>#0B0C10</p></li>
+              <li class="color-swatch-2"><p>#1D2833</p></li>
+            <li class="color-swatch-3"><p>#45A29E</p></li>
+              <li class="color-swatch-4"><p>#66FCF1</p></li>
+            <li class="color-swatch-5"><p>C5C6C7</p></li>
           </ul>
         </section>
-        <section class="textures">
-          <h3 class="section-heading">Textures</h3>
+        <section class="icons">
+          <h3 class="section-heading">Icones</h3>
           <ul class="swatchgrid">
-            <li class="texture-swatch-1"></li>
-            <li class="texture-swatch-2"></li>
-            <li class="texture-swatch-3"></li>
+            <li class="icon-swatch-1"><img src="star%20(1).png"></li>
+            <li class="icon-swatch-2"><img src="gear.png"></li>
+            <li class="icon-swatch-3"><img src="idea.png"></li>
           </ul>
         </section>
         <section class="buttons">
@@ -53,13 +53,13 @@
           <h3 class="section-heading">Typography</h3>
           <h1 class="h1-sample">A sample header</h1>
           <p class="font-details-h1">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Bebas Neue</span>,
+            <span class="font-color">#66FCF1</span>
           </p>
           <h2 class="h2-sample">An example of a sub header</h2>
           <p class="font-details-h2">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Rajdhani</span>,
+            <span class="font-color">#45A29E</span>
           </p>
           <p class="typography-sample">
             This sample paragraph has <strong>strong parts</strong> and
@@ -70,24 +70,26 @@
             netus et malesuada fames ac turpis egestas.
           </p>
           <p class="font-details-p">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Rajdhani</span>,
+            <span class="font-color">#C5C6C7</span>
           </p>
           <a href="#" class="typography-sample"
             >This is an example of a text link.</a
           >
           <p class="font-details-a">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Bebas Neus</span>,
+            <span class="font-color">#1F2833</span>
           </p>
         </section>
         <section class="adjectives">
           <h3 class="section-heading">Adjectives</h3>
           <ul>
-            <li>Write</li>
-            <li>Your</li>
-            <li>adjectives</li>
-            <li>here</li>
+            <li>Inspired By: <br> <a href="https://visme.co/blog/website-color-schemes/"><strong>Link</strong> Nr: 12</a></li>
+<!--            <li><a href="https://visme.co/blog/website-color-schemes/">Nr: 12</a></li>-->
+<!--
+            <li></li>
+            <li><a href="https://visme.co/blog/website-color-schemes/">Nr: 12</a></li>
+-->
           </ul>
         </section>
       </div>
@@ -95,9 +97,11 @@
     </main>
 
     <div class="full-width">
+<!--
       <footer>
         <p>Be creative - don't just use this template as is!</p>
       </footer>
+-->
     </div>
   </body>
 </html>
